# agent-router

./: .coverage  .env.example  .flake8  .gitignore  AZURE_DEPLOYMENT.md  LICENSE  README.md  agentrouter.ipynb  app.py  azure.yaml  build.sh  coverage.xml  format.sh  lint.sh  pyproject.toml  requirements-dev.txt  requirements.txt  validate-deployment.sh
.azure/: plan.copilot.md
.devcontainer/: devcontainer.json
.github/instructions/: testing-bestpractices.md.instructions.md
.github/workflows/: README.md  infra-validation.yml  python-lint.yml  python-tests.yml  tests.yml  ui-lint.yml  ui-tests.yml
api/: __init__.py  health_routes.py  query_routes.py  thread_routes.py
backend/: app.py  requirements.txt
backend/api/: health_routes.py  query_routes.py  thread_routes.py
backend/config/: settings.py
backend/services/: agent_factory.py  catalog_service.py  connected_agent_service.py  genie_agent_service.py  (+1 more)
config/: __init__.py  settings.py
frontend/: LICENSE  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.setup.ts
infra/: main.bicep  main.json
scripts/: build_all.sh  build_backend.sh  build_frontend.sh  start.sh
services/: __init__.py  agent_factory.py  catalog_service.py  connected_agent_service.py  genie_agent_service.py  message_processor.py
tests/: README.md  conftest.py
ui/: .prettierignore  LINTING.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  runtime.config.json  tsconfig.json  vite.config.ts  vitest.config.ts
ui/src/: App.tsx  (+3 more)
utils/: logging_config.py
(+101 files in other folders)
